--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 			margin: 0;
 			padding: 0;
 		}
+		img {
+			object-fit: contain;
+		}
 	</style>
 	
 </head>
@@ -62,9 +65,7 @@
 		<h1>Piyush Bhopalka</h1>
 		<nav>
 			<ul>
-				<li><a class="button" href="Resume.pdf">Resume</a></li>
-				<li><a class="button" href="https://www.facebook.com/bhopalkapiyush" target=newtab>facebook</a></li>
-				<li><a class="button" href="https://www.linkedin.com/in/pbhopalka" target=newtab>linkedin</a></li>
+				<li><a class="button" href="https://www.linkedin.com/in/pbhopalka" target=newtab>Linkedin</a></li>
 			</ul>
 		</nav>
 	</header>
